--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -88,7 +88,7 @@ tail_includes:
 </div> <!-- .post-meta -->
 
 <div class="post-content">
-  {{ content }}
+  {{ content | extlinks }}
 </div>
 
 <div class="post-tail-wrapper text-muted">
