--- a/_includes/head.html
+++ b/_includes/head.html
@@ -96,6 +96,7 @@
   <link rel="stylesheet" href="{{ site.data.assets[origin].fontawesome.css | relative_url }}">
 
   <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ '/commons/katex.min.css' | relative_url }}">
 
   {% if site.toc and page.toc %}
     <link rel="stylesheet" href="{{ site.data.assets[origin].toc.css | relative_url }}">
