--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@ layout: compress
 
     <div id="main-wrapper" class="d-flex justify-content-center">
       <div id="main" class="container pl-xl-4 pr-xl-4">
-        {{ content }}
+        {{ content | extlinks }}
       </div>
 
       {% include search-results.html %}
