--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -25,7 +25,7 @@ layout: default
         {{ title }}
       </h1>
       <div class="post-content">
-        {{ _content }}
+        {{ _content | extlinks }}
       </div>
     {% else %}
       {{ _content }}
