--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+: default
 ---
 
 {% include assets-origin.html %}
@@ -25,7 +25,7 @@ layout: default
         {{ title }}
       </h1>
       <div class="post-content">
-        {{ _content | extlinks }}
+        {{ _content }}
       </div>
     {% else %}
       {{ _content }}
