--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@ layout: compress
 <!DOCTYPE html>
 
 {% include assets-origin.html %}
+{% include tammymakesthings/helpers.html %}
 
 {% capture prefer_mode %}
   {% if site.theme_mode %}
