--- a/_sass/jekyll-theme-chirpy.scss
+++ b/_sass/jekyll-theme-chirpy.scss
@@ -22,4 +22,6 @@
   "layout/archives",
   "layout/categories",
   "layout/category-tag",
-  "layout/project-status";
+
+  "tammymakesthings/project-status",
+  "tammymakesthings/github-repo";
