--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -3,68 +3,68 @@ layout: default
 ---
 
 {% include assets-origin.html %}
+{% include tammymakesthings/helpers.html %}
 
 <div class="row">
 
-  <!-- core -->
-  <div id="core-wrapper" class="col-12 col-lg-11 col-xl-9 pr-xl-4">
-    <div class="post pl-1 pr-1 pl-md-2 pr-md-2">
+	<!-- core -->
+	<div id="core-wrapper" class="col-12 col-lg-11 col-xl-9 pr-xl-4">
+		<div class="post pl-1 pr-1 pl-md-2 pr-md-2">
 
-    {% capture _content %}
-      {% if layout.refactor or page.layout == 'project' %}
-        {% include refactor-content.html content=content %}
-      {% else %}
-        {{ content }}
-      {% endif %}
-    {% endcapture %}
+		{% capture _content %}
+			{% if layout.refactor or page.layout == 'project' %}
+				{% include refactor-content.html content=content %}
+			{% else %}
+				{{ content }}
+			{% endif %}
+		{% endcapture %}
 
-    {% if page.layout == 'project' or page.collection == 'tabs' %}
-      {% assign tab_key = page.title | downcase %}
-      {% assign title = site.data.locales[site.lang].tabs[tab_key] | default: page.title %}
-      {% assign project_status = page.project_status | default: "Planned" %}
-      {% assign project_status_type = project_status | downcase | replace: ' ', '-' %}
-      <h1 class="dynamic-title">
-        {{ title }}
-      </h1>
-      <div class="post-content">
-          <div class="project-status-{{ project_status_type }}">
-            <div class="status-title-{{ project_status_type }}">Project Status:</div>
-            <div class="status-text-{{ project_status_type }}">{{ project_status }}</div>
-        </div>
+		{% if page.layout == 'project' or page.collection == 'tabs' %}
+			{% assign tab_key = page.title | downcase %}
+			{% assign title = site.data.locales[site.lang].tabs[tab_key] | default: page.title %}
 
-        {{ _content }}
-      </div>
-    {% else %}
-      {{ _content }}
-    {% endif %}
+			<h1 class="dynamic-title">
+				{{ title }}
+			</h1>
 
-    </div>
-  </div> <!-- #core-wrapper -->
+			<div class="post-content">
 
-  <!-- panel -->
-  <div id="panel-wrapper" class="col-xl-3 pl-2 text-muted">
+                {% include tammymakesthings/project-status.html %}
+				{{ _content }}
+                {% include tammymakesthings/github-repo.html %}
 
-    <div class="access">
-      {% include update-list.html %}
-      {% include trending-tags.html %}
-    </div>
+			</div>
+		{% else %}
+			{{ _content }}
+		{% endif %}
 
-    {% for _include in layout.panel_includes %}
-      {% assign _include_path = _include | append: '.html' %}
-      {% include {{ _include_path }} %}
-    {% endfor %}
-  </div>
+		</div>
+	</div> <!-- #core-wrapper -->
+
+	<!-- panel -->
+	<div id="panel-wrapper" class="col-xl-3 pl-2 text-muted">
+
+		<div class="access">
+			{% include update-list.html %}
+			{% include trending-tags.html %}
+		</div>
+
+		{% for _include in layout.panel_includes %}
+			{% assign _include_path = _include | append: '.html' %}
+			{% include {{ _include_path }} %}
+		{% endfor %}
+	</div>
 
 </div>
 
 <!-- tail -->
 {% if layout.tail_includes %}
 <div class="row">
-  <div id="tail-wrapper" class="col-12 col-lg-11 col-xl-9 pl-3 pr-3 pr-xl-4 mt-5">
-    {% for _include in layout.tail_includes %}
-      {% assign _include_path = _include | append: '.html' %}
-      {% include {{ _include_path }} %}
-    {% endfor %}
-  </div>
+	<div id="tail-wrapper" class="col-12 col-lg-11 col-xl-9 pl-3 pr-3 pr-xl-4 mt-5">
+		{% for _include in layout.tail_includes %}
+			{% assign _include_path = _include | append: '.html' %}
+			{% include {{ _include_path }} %}
+		{% endfor %}
+	</div>
 </div>
 {% endif %}
